add get /users/ endpoint
