# flask_interface/routes.py
@@ -7,6 +7,7 @@ from flask import Blueprint, request, jsonify
 from flasgger import Swagger
 from application.useCases.RegisterUserService import RegisterUserService
 from application.useCases.GetUserIdService import GetUserIdService
+from application.useCases.GetAllUsersService import GetAllUsersService
 from application.useCases.GetUserEmailService import GetUserEmailService
 from application.useCases.AuthenticationService import AuthenticationService
 from Infrastructure.adapterUserRepo import AdapterUserRepo
@@ -19,6 +20,7 @@ bp = Blueprint('usuarios', __name__)
 # Inicialización de servicios y repositorio
 adapterRepo = AdapterUserRepo()
 register_service = RegisterUserService(adapterRepo)
+getUsers = GetAllUsersService(adapterRepo)
 getUserDoc = GetUserIdService(adapterRepo)
 getUserEmail = GetUserEmailService(adapterRepo)
 autenticateUser = AuthenticationService(adapterRepo)
@@ -41,6 +43,18 @@ def register():
     except ValueError as e:
         print(f"Error al registrar usuario: {str(e)}")
         return jsonify({"error": str(e)}), 400
+
+@bp.route("/users/", methods=["GET"])
+@monitor_endpoint("get_all_users")
+def getAllUsers():
+    """
+    Endpoint para obtener un usuario por número de documento
+    """
+    try:
+        users = getUsers.execute()
+        return jsonify(users), 200
+    except ValueError as e:
+        return jsonify({"error": str(e)}), 404
 
 @bp.route("/users/getById/<document>", methods=["GET"])
 @monitor_endpoint("get_user_by_id")
